# ipc-example

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  message_passing.rs  shared_memory.rs
